# gazebo_python_swig

./: CMakeLists.txt  README.md  test_gazebo_sim.py
include/: custom_main.h
models/disk_blue/: model.config  model.sdf
models/disk_green/: model.config  model.sdf
models/room_closed_10m_10m_single_obstacle/: model.config  model.sdf  room_closed_10m_10m_single_obstacle.blend  room_closed_10m_10m_single_obstacle.world
models/room_closed_10m_10m_single_obstacle/meshes/: room_closed_10m_10m_single_obstacle.dae
models/simple_robot/: model.config  model.sdf
src/: custom_main.cpp  custom_main.i
